[gd_scene load_steps=14 format=3 uid="uid://bju83lqmpv8l0"]

[ext_resource type="Script" uid="uid://or6jxiwn13ui" path="res://GameStation/game_station.gd" id="1_1rg1j"]
[ext_resource type="Script" uid="uid://cdh1oja6p1an4" path="res://GameStation/station_stats.gd" id="2_vp250"]
[ext_resource type="Texture2D" uid="uid://dsufjocukntti" path="res://Assets/Graphics/Machines/ss_fesh.png" id="4_wdeg8"]
[ext_resource type="Texture2D" uid="uid://dokrqbvwwj484" path="res://Assets/Graphics/tikit.png" id="5_wdeg8"]

[sub_resource type="Resource" id="Resource_wdeg8"]
resource_local_to_scene = true
script = ExtResource("2_vp250")
metadata/_custom_type_script = "uid://cdh1oja6p1an4"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kk21"]
size = Vector2(64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_adk7m"]
atlas = ExtResource("4_wdeg8")
region = Rect2(512, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5enti"]
atlas = ExtResource("4_wdeg8")
region = Rect2(256, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sfih"]
atlas = ExtResource("4_wdeg8")
region = Rect2(384, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_18gmx"]
atlas = ExtResource("4_wdeg8")
region = Rect2(0, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w8pu"]
atlas = ExtResource("4_wdeg8")
region = Rect2(128, 0, 128, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_vp250"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adk7m")
}],
"loop": true,
"name": &"ded",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5enti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sfih")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18gmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w8pu")
}],
"loop": true,
"name": &"playing",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7sfih"]
size = Vector2(64, 64)

[node name="GameStation" type="Area2D"]
collision_layer = 128
collision_mask = 128
script = ExtResource("1_1rg1j")
station_stats = SubResource("Resource_wdeg8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0kk21")

[node name="PlayerPosition" type="Marker2D" parent="."]
position = Vector2(0, 96)

[node name="GoAwayPosition" type="Marker2D" parent="."]
position = Vector2(224, 96)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -32.0
offset_top = -96.0
offset_right = 32.0
offset_bottom = -69.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vp250")
autoplay = "default"
frame_progress = 0.5628714

[node name="WonPrizeLabel" type="Label" parent="."]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -96.0
offset_right = 16.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="WonPrizeLabel"]
layout_mode = 0
offset_left = 38.0
offset_right = 58.0
offset_bottom = 20.0
texture = ExtResource("5_wdeg8")
expand_mode = 1
stretch_mode = 5

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_7sfih")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
